[package]
name = "hash_histogram"
version = "0.5.0"
authors = ["gjf2a <ferrer@hendrix.edu>"]
edition = "2021"
description = "HashHistogram creates histograms with keys of any hashable data type. Features include rank ordering and mode."
readme = "README.md"
homepage = "https://github.com/gjf2a/hash_histogram"
repository = "https://github.com/gjf2a/hash_histogram"
license = "Unlicense"
keywords = ["histogram", "hash"]
categories = ["Data structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
