[package]
name = "hash_histogram"
version = "0.7.0"
authors = ["gjf2a <ferrer@hendrix.edu>"]
edition = "2021"
description = "HashHistogram creates histograms with keys of any hashable data type. Features include rank ordering and mode."
readme = "README.md"
homepage = "https://github.com/gjf2a/hash_histogram"
repository = "https://github.com/gjf2a/hash_histogram"
license = "MIT OR Apache-2.0"
keywords = ["histogram", "hash"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"